Revision history for Perl extension Math::BigInt::FastCalc.

2015-10-28 v0.35 pjacklam
  * Sync test files with Math-BigInt-1.999707.
  * Update the README file.
  * Replace 'use vars ...' with 'our ...'. We require a Perl newer than 5.6.0
    anyway.
  * Required version of Math-BigInt is now 1.999706.
  * Move 'Test::More' from 'build_requires' to 'test_requires' in Makefile.PL.

2015-09-21 v0.34 pjacklam
  * Sync test files with Math-BigInt-1.999703.
  * Required version of Math-BigInt is now 1.999703.
  * Update author information.

2015-09-17 v0.33 pjacklam
  * Sync test files with Math-BigInt-1.999702.
  * Required version of Math-BigInt is now 1.999702.

2015-09-11 0.32 pjacklam
 CHANGES
  * Add changes from version 0.30 to 0.31.
  * Re-order change entries to decreasing order after version number.
 inc/Module/Install.pm
  * Update bundled version from 1.08 to 1.16.
 lib/Math/BigInt/FastCalc.pm
  * Increase version number to 0.32
  * Update author information.
 Makefile.PL
  * Required version of Math::BigInt and Math::BigInt::Calc is 1.999701.
 t/01load.t
  * Display more information about loaded modules.
 t/bigfltpm.inc
  * Sync tests with Math-BigInt distribution.
 t/bigfltpm.t
  * Adjust number of tests.
  * Make sure we test Math::BigInt::FastCalc, not Math::BigInt::Calc.
 t/bigintpm.inc
  * Fix spelling errors.
 t/bigintpm.t
  * Make sure we test Math::BigInt::FastCalc, not Math::BigInt::Calc.
  * Adjust number of tests.
 t/mbimbf.t
  * Make sure we test Math::BigInt::FastCalc, not Math::BigInt::Calc.
 t/*.t
  * Add "use warnings" to test scripts, since Perl 5.6.2 is required anyway,
    and "use warnings" was introduced in Perl 5.6.1.
  * Modified test scripts so the difference between the test files in the
    Math-BigInt distribution and the backend distributions are as few and as
    small as possible. This makes for easier release management.

2014-03-04 0.31 pjacklam
 FastCalc.xs